tests/error/no_compat_sub.gw
// [contains] must be of type 'int'
 int i[4];
Object o;
i[o];
